--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background: #eee;
 }
@@ -57,3 +57,9 @@ a:hover {
   color: #111;
 }
 
+#canvas {
+  background: #f8f8f8;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+}
